# reditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
include/: lua.h  rlib.h
libs/lua/: CMakeLists.txt
scripts/: boot.lua  config.lua  main.lua  reditor.lua
scripts/core/: buffer.lua  editor.lua  file.lua  row.lua
scripts/libs/argparse/src/: argparse.lua
scripts/libs/array/: array.lua
scripts/libs/array/test/: array_test.lua
scripts/mode/: mode.lua  normal.lua
scripts/utils/: math_utils.lua  path_utils.lua
scripts/view/: terminal_window.lua  window.lua
scripts/view/base/: buffer_view.lua  window.lua
scripts/view/terminal/: buffer_view.lua  window.lua
src/: CMakeLists.txt  buf.c  buf.h  common.c  common.h  config.c  config.h  input.c  input.h  reditor.c  render.c  render.h  terminal_render.c  terminal_render.h
